# simple-auth

./: .env.example  .gitignore  ISSUES.md  LICENSE  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/api/: admin.py  auth.py  users.py
app/core/: config.py  database.py
app/models/: __init__.py  login_attempt.py  session.py  system_setting.py  user.py
app/schemas/: admin.py  auth.py  user.py
app/services/: admin.py  auth.py  user.py
app/utils/: __init__.py  datetime.py  password.py
cli/: __init__.py  system_management.py
docs/: README.md  admin-features.md  api-specification.md  authentication-flow.md  database-schema.md  nginx-integration.md  security.md  subscription-billing.md  technology-stack.md  user-features.md
migrations/: env.py  script.py.miko
migrations/versions/: __init__.py  initial_migration.py
scripts/: create-issues.sh
